--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0.1 - Assemblies/10.0.1.0 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0.1 - Assemblies/10.0.1.0 - Orbiting Binary.md
@@ -50,11 +50,15 @@ The new self-repulsive term, $\mathbf{a}_{1,1}(t)$, acts to increase the particl
 The deflationary spiral does not continue indefinitely. The self-repulsive force creates a dynamic feedback mechanism that ultimately stabilizes the system and prevents a singularity.
 
 #### **Curvature Limit and Stability**
-As the inward spiral tightens, each Architrino gets progressively closer to its own recent path. This proximity intensifies the self-repulsive force, which counteracts the inward pull from the partner. Eventually, a state of equilibrium is reached where the attractive force is perfectly balanced by the self-repulsive force that prevents the path from curving any further.
+The inward spiral does not lead to a singularity. The limiting factor is the geometry of self-interaction. As the spiral tightens, the path's curvature increases, bringing each Architrino closer to its own recent emission points. This proximity dramatically amplifies the self-repulsive force. The system reaches a critical state where any further decrease in orbital radius would cause an overwhelming increase in this self-repulsion, effectively creating a "pressure" that resists further collapse. The inward spiral is halted not by a simple balance of forces, but by this geometric feedback loop.
 
-At this point, the inward spiral halts, and the system settles into a **stable, circular orbit of a minimum radius**. This final state is a dynamic equilibrium.
+At this limit, the trajectory stabilizes, and the system settles into a **stable, circular orbit of a minimum radius**. This final state is a dynamic equilibrium where the inward pull from the partner is perfectly channeled into the circular motion, while the self-repulsive force prevents any further tightening of the path's curvature.
 
 #### **Emergent Properties**
 The stabilization of the orbiting binary gives rise to fundamental, emergent properties for the universe:
 -   **An Emergent Unit of Distance:** The radius of this stable orbit is a constant, determined by the fundamental parameters of the model (field speed $v$, charge $\epsilon$). It serves as the smallest possible orbital radius and thus becomes a natural, emergent unit of distance.
 -   **An Imposed Speed Limit:** While individual Architrinos have no inherent speed limit, the particles within this stable assembly are constrained to a specific, constant orbital speed. This creates a practical speed limit for particles bound within such structures.
+
+---
+
+**Note on Complex Scenarios:** The analysis above describes a stationary binary system. More complex dynamics arise when the binary assembly is also translating through space, especially when the axis of orbit is not aligned with the direction of the group's velocity.
