--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.3 - Coherence Patterns/00.2.3 - Coherence Patterns (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.3 - Coherence Patterns/00.2.3 - Coherence Patterns (index).md
@@ -29,8 +29,10 @@ These patterns work together as enhanced coherence operations that extend the ca
 
 | Category | Description | Key Elements | Polarity |
 |----------|-------------|--------------|----------|
-| Coherence Patterns | Enhanced operations | [[Persistence (pattern)]], [[Resilience (pattern)]], [[Synchronization (pattern)]] | P+/P-/P0 |
-| Modulator Derivation | Universal modulator effects | ∇S → Persistence (P+), λV → Resilience (P-), ψA → Synchronization (P0) | P+ → P- → P0 |
+| Persistence Pattern | Memory preservation enhancement | [[Persistence (pattern)]] - ∇S derived | P+ |
+| Resilience Pattern | Recovery coordination enhancement | [[Resilience (pattern)]] - λV derived | P- |
+| Synchronization Pattern | Temporal alignment enhancement | [[Synchronization (pattern)]] - ψA derived | P0 |
+| SVA Progression | Canonical modulator flow | ∇S (P+) → λV (P-) → ψA (P0) | P+ → P- → P0 |
 | Primitive Enhancement | Extended capabilities | Phase+, Memory+, Recovery+ functionality |
 | Pattern Integration | Coordination mechanisms | Persistence ↔ Synchronization ↔ Resilience |
 | Operational Enhancement | Advanced functionality | Temporal coordination, information management, adaptive response |
@@ -42,10 +44,10 @@ Each pattern provides technical and humane mappings, advanced operational semant
 
 ## Core References
 
-**Coherence Patterns:**
-- [[Persistence (pattern)]] - Memory preservation pattern for maintaining information across contexts (P+)
-- [[Resilience (pattern)]] - Recovery coordination pattern for managing system adaptation (P-)
-- [[Synchronization (pattern)]] - Temporal alignment pattern for coordinating operations across time (P0)
+**Coherence Patterns (SVA Progression):**
+- [[Persistence (pattern)]] - Memory preservation enhancement (∇S-derived, P+)
+- [[Resilience (pattern)]] - Recovery coordination enhancement (λV-derived, P-)
+- [[Synchronization (pattern)]] - Temporal alignment enhancement (ψA-derived, P0)
 
 **Related Modules:**
 - [[00.2.2 - Coherence Primitives (index)]] - Foundation primitives that patterns enhance
@@ -57,10 +59,10 @@ Each pattern provides technical and humane mappings, advanced operational semant
 
 ## Key Principles
 
-1. **Modulator Derivation**
-   - Persistence derives from ∇S (Structure) modulator effects
-   - Resilience derives from λV (Void) modulator effects
-   - Synchronization derives from ψA (Awareness) modulator effects
+1. **Modulator Derivation (SVA Progression)**
+   - Persistence (P+) derives from ∇S (Structure) modulator effects
+   - Resilience (P-) derives from λV (Void) modulator effects
+   - Synchronization (P0) derives from ψA (Awareness) modulator effects
 
 2. **Primitive Enhancement**
    - All coherence patterns must enhance, not replace, primitive operations
