--- a/Delta Theory/20 - Informational Layer/20.2 - Recursive Trace/20.2 - Recursive Trace (index).md
+++ b/Delta Theory/20 - Informational Layer/20.2 - Recursive Trace/20.2 - Recursive Trace (index).md
@@ -54,7 +54,7 @@ Each analysis provides:
 
 **Foundational Elements:**
 - [[00.0.0.0 - Core Axiom & Theorems (index)]] - Theoretical foundation for epistemological analysis
-- [[T1 — Irreducibility (axiom)]] - Irreducibility principle preventing reductive explanations
+- [[T1 — Irreducibility (theorem)]] - Irreducibility principle preventing reductive explanations
 - [[T2 — Asymmetry (theorem)]] - Asymmetry theorem informing change analysis
 
 ---
