--- a/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.2 - Coherence Primitives/00.2.2 - Coherence Primitives (index).md
+++ b/Delta Theory/00 - Translation Layer/00.2 - Coherence Orchestration/00.2.2 - Coherence Primitives/00.2.2 - Coherence Primitives (index).md
@@ -29,10 +29,10 @@ These primitives work together as the core coherence operations that implement t
 
 | Category | Description | Key Elements | Polarity |
 |----------|-------------|--------------|----------|
-| Coherence Primitives | Core operations | [[Memory (primitive)]], [[Recovery (primitive)]], [[Phase (primitive)]] | P+/P-/P0 |
-| Primitive Derivation | Structural grounding | ∆ → R(·) → ⊚ applied to information/stability/temporal contexts | SVA triad |
-| Theorem Mapping | Grounding principles | T9 → Memory (P+), T8 → Recovery (P-), T7 → Phase (P0) | P+ → P- → P0 |
-| Operational Flow | Coherence sequence | Memory (preserve) → Recovery (restore) → Phase (synchronize) | Canonical |
+| Memory Primitive | Information preservation | [[Memory (primitive)]] - T9 derived | P+ |
+| Recovery Primitive | Stability restoration | [[Recovery (primitive)]] - T8 derived | P- |
+| Phase Primitive | Temporal synchronization | [[Phase (primitive)]] - T7 derived | P0 |
+| SVA Progression | Canonical flow | Memory (P+) → Recovery (P-) → Phase (P0) | P+ → P- → P0 |
 | Control Parameters | Timing constants | r_temporal (P+), r_memory (P0), γ_retention (P0), r_stability (P-), δ_recovery (P-) | SVA balance |
 | Modulator Effects | Enhancement control | ∇S (structure), λV (threshold), ψA (coherence) |
 
@@ -42,10 +42,10 @@ Each primitive provides technical and humane mappings, operational semantics, co
 
 ## Core References
 
-**Coherence Primitives:**
-- [[Memory (primitive)]] - Information preservation primitive for maintaining data across state transitions (P+)
-- [[Recovery (primitive)]] - Stability restoration primitive for managing perturbation responses (P-)
-- [[Phase (primitive)]] - Temporal synchronization primitive for coordinating timing across operations (P0)
+**Coherence Primitives (SVA Progression):**
+- [[Memory (primitive)]] - Information preservation primitive (T9-derived, P+)
+- [[Recovery (primitive)]] - Stability restoration primitive (T8-derived, P-)
+- [[Phase (primitive)]] - Temporal synchronization primitive (T7-derived, P0)
 
 **Related Modules:**
 - [[00.0.4 - Structural Primitives (index)]] - Foundational primitives that coherence primitives extend
@@ -62,13 +62,13 @@ Each primitive provides technical and humane mappings, operational semantics, co
    - Applied to coherence contexts: information/temporal/stability
    - Each primitive implements the full structural sequence in its domain
 
-2. **Theorem Grounding**
-   - Memory implements T9 (Memory Coherence) principles
-   - Recovery implements T8 (Recovery Stability) principles
-   - Phase implements T7 (Temporal Continuity) principles
+2. **Theorem Grounding (SVA Progression)**
+   - Memory (P+) implements T9 (Memory Coherence) - information preservation
+   - Recovery (P-) implements T8 (Recovery Stability) - stability discrimination
+   - Phase (P0) implements T7 (Temporal Continuity) - temporal synchronization
 
 3. **Coherence Orchestration**
-   - Primitives work together in canonical sequence: Memory → Recovery → Phase (P+ → P- → P0)
+   - Primitives follow canonical SVA sequence: Memory (P+) → Recovery (P-) → Phase (P0)
    - Coherence complexity emerges from structural simplicity through specialized application
    - No coherence operation can violate microkernel boundaries (ε, c, Cs)
 
