--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -49,7 +49,10 @@ whose delayed solution is $\rho(t,\mathbf{s})=\dfrac{q}{4\pi r^2}\delta(r-v\tau)
 As a point particle, an Architrino traces a continuous path (or worldline) through timespace, denoted by its position vector $\mathbf{s}_a(t)$. The field described in the preceding sections is generated continuously from every point along this path.
 
 #### **Conservation and Uniqueness**
-A fundamental postulate of this model is that Architrinos are eternal: they cannot be created or destroyed. This implies that every Architrino has a complete and infinite history, or provenance. Furthermore, the path of each Architrino is unique. 
+A fundamental postulate of this model is that Architrinos are eternal: they cannot be created or destroyed. This implies that every Architrino has a complete and infinite history, or provenance. Furthermore, the path of each Architrino is unique.
+
+#### **Energy Carriers**
+Architrinos are the sole carriers of kinetic and potential energy in this model. All energy is fundamentally tied to the motion and interactions of these point particles.
 
 #### **Coincidence of Particles**
 As point particles, Architrinos have no physical volume. There is nothing in the model to prevent two or more particles from occupying the same location at the same instant in time. For example, in an otherwise empty timespace, an Electrino and a Positrino released from rest with some initial separation will accelerate towards each other and eventually coincide as they pass.
@@ -107,7 +110,7 @@ The model places no inherent limit on the speed of an Architrino, $|\mathbf{v}_a
 It is important to distinguish this immediate relationship (between $t_{\text{now}}$ and $t_{\text{now}} + \Delta t$) from the possibility of an Architrino intersecting one of its own wavefronts emitted earlier in its path history. This is somewhat analogous to a speedboat passing it's own wake, and later curving or stopping such that it's past wake catches up and passes.
 
 #### **Velocity-Modulated Emission**
-While the Architrino emits its field at a constant rate, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
+While an Architrino is a constant rate emitter of potential per unit time, the strength of the impulse generated at any instant is modulated by its speed. The emission strength is inversely related to the particle's speed, being maximal for a stationary particle and decreasing as speed increases.
 
 To model this without singularities, we define the effective charge magnitude, $q_{eff}$, using a dimensionless factor based on the ratio of the particle's speed to the field speed, $\beta(t_0) = |\mathbf{v}_a(t_0)|/v$. A simple, non-singular model is:
 $$
