--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -1,3 +1,15 @@
+### Core Emission Properties
+
+The fundamental action of an Architrino is the continuous emission of a potential field. This process has the following key properties:
+
+-   **Constant Rate of Emission:** Each Architrino is a constant rate emitter of potential per unit time.
+-   **Point of Emission:** The potential emerges at the Architrino's current location (radius = 0) at time $t=\text{now}$ as a spatial Dirac delta.
+-   **Spherical Expansion:** From its point of emission, the potential expands as a perfectly spherical wavefront.
+-   **Field Speed:** The radius of this sphere grows at a constant rate, the field speed $v$.
+-   **Surface Density:** The magnitude of the potential is concentrated on the surface of the sphere and decreases as a function of $1/r^2$, where $r$ is the sphere's radius.
+
+---
+
 ### Geometric characterization
 
 Consider timespace $M=\mathbb{R}\times\mathbb{R}^3$ with coordinates $(t,\mathbf{s})$ and Euclidean spatial metric. An emission event at $(t_0,\mathbf{s}_0)$ generates a radially symmetric, measure-valued field supported on the future spherical wavefront
