--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Action.md
@@ -1,6 +1,15 @@
 # Action and Interaction
 
-The dynamics of an Architrino are governed by a simple action: it experiences an acceleration when it intersects a potential sphere. This is the fundamental mechanism of interaction in the model.
+The dynamics of an Architrino are governed by a simple action that has four key properties:
+
+-   **Trigger Condition:** Action occurs when a point object intersects a potential sphere. This is the sole mechanism of interaction.
+-   **Direction of Force:** The resulting force (and acceleration) is directed along the line connecting the receiving particle's current position to the source particle's historical emission point.
+-   **Superposition:** The total action on a particle at any instant is the vector sum of the actions from all intersecting potential spheres from all sources, including itself.
+-   **Velocity Dependence:** The dynamics are velocity-dependent. The strength of an emitted potential sphere is modulated by the emitter's velocity. Furthermore, a particle's ability to interact with its own field is determined by whether its speed exceeds the field speed.
+
+The fundamental mechanism of this action is an acceleration experienced by the particle.
+
+---
 
 ### **Interaction Condition**
 
