--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Positrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.3 - Positrino.md
@@ -30,8 +30,8 @@ This behavior is consistent with a force law where like charges repel and opposi
 
 ### **3. Path**
 
-The Positrino follows the general path dynamics described for the Architrino. Its path is the set of historical positions:
+The Positrino follows the general path dynamics described in the main Architrino Path document. Its path is the set of historical positions:
 $$
 \mathcal{P}_p = \{ \mathbf{s}_p(t) \mid t \le t_{\text{now}} \}
 $$
-Its future trajectory is determined by its current state $(\mathbf{s}_p, \mathbf{v}_p)$ and the superposition of accelerations from all intersecting fields, as detailed in its interaction dynamics.
+Its future trajectory is determined by its current state $(\mathbf{s}_p, \mathbf{v}_p)$ and the superposition of accelerations from all intersecting fields.
