--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -2,13 +2,15 @@
 
 In this model, all energy is fundamentally tied to the Architrinos and the potential fields they generate. Architrinos are the sole carriers of kinetic energy through their motion and the source of potential energy through their interactions.
 
-### Kinetic Energy
+### Kinetic Energy and Momentum
 
-Kinetic energy ($E_k$) is the energy an Architrino possesses due to its motion.
+An Architrino in motion possesses both kinetic energy and momentum.
 
--   It is a scalar quantity that is a monotonically increasing function of the particle's speed, $|\mathbf{v}_a|$.
--   Since mass is an emergent property of assemblies, kinetic energy is considered a fundamental property of a moving Architrino, not a quantity derived from mass and velocity (i.e., it is not defined as $\frac{1}{2}mv^2$).
--   As a free Architrino has no inherent speed limit, its kinetic energy is, in principle, unbounded.
+-   **Kinetic Energy ($E_k$):** This is a scalar quantity representing the total energy of motion. It is a monotonically increasing function of the particle's speed, $|\mathbf{v}_a|$. As a free Architrino has no inherent speed limit, its kinetic energy is, in principle, unbounded.
+
+-   **Momentum ($\mathbf{p}$):** This is the vector counterpart to kinetic energy, representing the directed energy of motion. Its magnitude is a function of speed, and its direction is aligned with the particle's velocity vector, $\mathbf{v}_a$.
+
+Since mass is not a fundamental property in this model, neither kinetic energy nor momentum are defined in terms of it (e.g., $E_k \neq \frac{1}{2}mv^2$ and $\mathbf{p} \neq m\mathbf{v}$). They are considered intrinsic properties of a moving Architrino.
 
 ### Potential Energy and Interaction
 
@@ -36,15 +38,15 @@ The model adheres to the principle of energy conservation through a continuous e
     $$
     This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the energy it radiates via its potential field decreases. This self-regulating mechanism is crucial for maintaining the overall energy balance of the system.
 
-### Total Energy vs. Apparent Energy (Mass)
+### Total Energy vs. Apparent Energy and Momentum
 
-For composite systems (assemblies), it is essential to distinguish between the total internal energy and the apparent energy that is perceived externally as mass.
+For composite systems (assemblies), it is essential to distinguish between the total internal energy and the apparent energy and momentum that govern the assembly's external interactions.
 
 -   **Total Energy ($E_{total}$):** The total energy of an assembly is the sum of the kinetic energies of its constituent Architrinos plus the potential energy of their mutual interactions. For tightly bound systems like the Noether Core, this internal energy is immense.
 
--   **Apparent Energy (Mass):** The apparent energy is what determines how the assembly interacts with the *external* universe. It is a measure of the assembly's residual, time-averaged external field.
+-   **Apparent Energy and Momentum:** The apparent energy is what determines how the assembly interacts with the *external* universe. It is a measure of the assembly's residual, time-averaged external field. The apparent momentum of the assembly is the vector sum of the momenta of its constituents. For a stationary assembly, internal momenta cancel out, resulting in zero net momentum.
 
 > **Energy Shielding**
 > In stable assemblies like the **Noether Core**, the rapid internal motions of positive and negative Architrinos cause their emitted potential fields to largely cancel out via superposition. This "shields" the vast majority of the assembly's enormous internal energy from the outside world.
 
-Mass is therefore not a fundamental property of matter. It is an **emergent property** that reflects the degree to which an assembly's total internal energy is shielded. The tiny, residual external field of a shielded assembly is what we observe and measure as its mass. This concept provides a physical explanation for the hierarchy problem—why the observed masses of particles are so much smaller than the Planck-scale energies that might be involved in their fundamental structure.
+Inertia is therefore not a fundamental property of matter, but an **emergent property** of assemblies. It reflects the degree to which an assembly's total internal energy is shielded. The tiny, residual external field of a shielded assembly is what gives it its inertial properties and determines its momentum for a given group velocity. This concept provides a physical explanation for the hierarchy problem—why the observed inertial properties of particles are so much smaller than what might be expected from the Planck-scale energies involved in their fundamental structure.
