--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -26,7 +26,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     $$
     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres.
 
--   **Velocity Dependence:** The dynamics are velocity-dependent. The strength of an emitted potential sphere is modulated by the emitter's velocity. Furthermore, a particle's ability to interact with its own field is determined by whether its speed exceeds the field speed.
+-   **Velocity Dependence:** The dynamics are velocity-dependent. The strength of an emitted potential sphere is modulated by the **emitter's** velocity, and the action on the **receiver** is also modulated by its velocity. Furthermore, a particle's ability to interact with its own field is determined by whether its speed exceeds the field speed.
 
 ### **Self-Interaction**
 
