--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -31,3 +31,15 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
 ### **Self-Interaction**
 
 A crucial dynamic arises from the possibility of self-interaction. An Architrino can intersect a potential sphere that it emitted itself at an earlier point in its history. Self-interaction can occur when an architrino's speed has exceeded field speed ($|\mathbf{v}_a| > v$). In this regime, the particle is moves ahead of previously emitted wavefronts, allowing it to interact with its own field. This self-interaction is always repulsive and plays a key role in the stability of emergent structures.
+
+### **Informational Ambiguity at the Receiver**
+
+From the perspective of the receiving Architrino, the information carried by an intersecting potential sphere is limited. The receiver only knows two things:
+1.  The net strength of the potential at the point of intersection.
+2.  The radial direction from which the potential arrived (i.e., the vector pointing back to the emission point).
+
+It does not have direct knowledge of the source's identity, distance, or velocity. Because the magnitude of an emission is modulated by the emitter's velocity, a single received potential could have multiple possible origins. For example, a weak negative potential arriving along a specific radial could be from a nearby, fast-moving Electrino or a distant, slow-moving one.
+
+This creates a more profound ambiguity: the receiver cannot distinguish between a negative potential from an Electrino on one side and a positive potential from a Positrino on the opposite side. An acceleration *towards* a point on the radial could be interpreted as attraction to a Positrino at that point, or repulsion from an Electrino located at the diametrically opposite point on the same line.
+
+This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting spheres. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
