--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -2,7 +2,7 @@
 
 The fundamental action of an Architrino is the continuous emission of a potential field. This process has the following key properties:
 
--   **Constant Rate of Emission:** Each Architrino is a constant rate emitter of potential per unit time.
+-   **Constant Rate of Wavefront Emission:** Each Architrino emits potential wavefronts at a constant rate. The magnitude of the potential carried by each wavefront, however, is modulated by the particle's speed.
 -   **Point of Emission:** The potential emerges at the Architrino's current location (radius = 0) at time $t=\text{now}$ as a spatial Dirac delta.
 -   **Spherical Expansion:** From its point of emission, the potential expands as a perfectly spherical wavefront.
 -   **Field Speed:** The radius of this sphere grows at a constant rate, the field speed $v$.
