--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Geometry.md
@@ -16,7 +16,7 @@ Consider timespace $M=\mathbb{R}\times\mathbb{R}^3$ with coordinates $(t,\mathbf
 $$
 \mathcal{C}=\{(t,\mathbf{s}) : t\ge t_0,\; r = v\,(t-t_0)\},\quad r=\|\mathbf{s}-\mathbf{s}_0\|,
 $$
-where $v$ is the constant field speed. At the emission time $t=t_0$, the field is a spatial Dirac delta of magnitude $q$ located at $\mathbf{s}_0$. At each fixed time $t>t_0$, the field is a surface delta measure on the sphere $S_{r}$ of radius $r=v(t-t_0)$ centered at $\mathbf{s}_0$, normalized so its total mass is $q$.
+where $v$ is the constant field speed. At the emission time $t=t_0$, the field is a spatial Dirac delta of charge $q$ located at $\mathbf{s}_0$. The magnitude of this fundamental charge is defined as $|q| = |e/6|$, where $e$ is the elementary charge of an electron. At each fixed time $t>t_0$, the field is a surface delta measure on the sphere $S_{r}$ of radius $r=v(t-t_0)$ centered at $\mathbf{s}_0$, normalized so its total mass is $q$.
 
 This expanding wavefront has two key properties:
 -   **Indefinite Expansion:** The wavefront expands indefinitely as $t \to \infty$. The radius $r = v(t-t_0)$ grows without bound, and the surface density $q/(4\pi r^2)$ approaches zero but never reaches it.
