--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.1 - Orbiting Binary.md
@@ -1,8 +1,10 @@
 # Orbiting Binary Assembly
 
-An orbiting binary is the simplest emergent assembly, consisting of two Architrinos of opposite charge—an Electrino and a Positrino. This system demonstrates the fundamental principles of interaction, including the consequences of delayed potential and the role of the velocity symmetry point. Let's consider the ideal case of a symmetric orbit in a universe with no other Architrinos.
+An orbiting binary is the simplest emergent assembly, consisting of two Architrinos of opposite charge—an Electrino and a Positrino. With charges $-\epsilon$ and $+\epsilon$, the assembly is electrically neutral overall. This system demonstrates the fundamental principles of interaction, including the consequences of delayed potential and the role of the velocity symmetry point. 
 
 ### 1. System Definition and Equations of Motion
+
+Let's consider the ideal case of a symmetric orbit in a universe with no other Architrinos.
 
 Let the Electrino be particle 1 and the Positrino be particle 2.
 -   **Positions:** $\mathbf{s}_1(t)$ and $\mathbf{s}_2(t)$
