--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.4 - Personality Architrinos and Fermions.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.4 - Personality Architrinos and Fermions.md
@@ -22,15 +22,13 @@ The diverse zoo of fermions in the Standard Model emerges from different combina
 
 Leptons are the simplest fermion assemblies.
 
--   **Neutrino:** A neutrino is a bare Noether Core, possibly with a captured neutral binary as its personality charge. Its profound energy shielding and lack of a net external charge explain why it interacts so weakly with other matter. It is essentially a "cloaked" assembly.
-
 -   **Electron:** An electron is a Noether Core with a single Electrino captured as its personality charge. This orbiting Electrino is what gives the assembly its familiar net charge of $-1\epsilon$. The higher-generation charged leptons (muon and tau) are simply more energetic versions of this same basic structure, where the personality Electrino occupies a higher, less stable energy state.
 
 #### **Quarks**
 
 Quarks are more complex assemblies, typically involving multiple personality architrinos.
 
--   **Fractional Charge:** The characteristic fractional charges of quarks (e.g., $+2/3\epsilon$ for an up quark, $-1/3\epsilon$ for a down quark) are an emergent property of the geometry. They arise from the time-averaged potential of the personality architrinos. An orbiting personality architrino may spend part of its orbit shielded by the core and part of it externally expressed, resulting in an effective charge that is a fraction of the elementary charge $\epsilon$.
+-   **Fractional Charge:** The characteristic fractional charges of quarks (e.g., $+2/3 e$ for an up quark, $-1/3 e$ for a down quark) are an emergent property. With the fundamental charge magnitude defined as $\epsilon = |e/6|$, these fractional values are revealed to be integer multiples of the Architrino charge. An up quark corresponds to an assembly with a net charge of $+4\epsilon$, and a down quark corresponds to one with a net charge of $-2\epsilon$. The "fractional" nature is a consequence of measuring charge in units of $e$ instead of the more fundamental unit $\epsilon$.
 
 -   **Color Charge:** The property of "color charge" in Quantum Chromodynamics (QCD) is also an emergent feature. It corresponds to the different geometric phases and relative orientations of the orbits of the multiple personality architrinos bound to the core.
 
