--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.6 - Gluons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.6 - Gluons.md
@@ -22,6 +22,26 @@ The property of "color charge" is reinterpreted as an emergent geometric attribu
 
 -   **Geometric Basis of Color:** A quark's color is determined by which of its three internal binaries hosts a particular configuration of personality architrinos. For example, an up quark's net personality charge of $+4\epsilon$ can be distributed among the three binaries in three distinct ways, corresponding to the three color states (e.g., red, green, blue). The SU(3) symmetry of the strong force is thus proposed to be a direct consequence of the tri-binary structure of the Noether core.
 
+    The specific color state is determined by the distribution of the six personality architrinos among the three binaries of the Noether core. Each binary is assumed to bind two personality architrinos in its polar regions.
+
+    #### Up Quark (Net Personality Charge: +4ε)
+    An up quark consists of five personality Positrinos (+ε) and one Electrino (-ε). The color is determined by which of the three binaries binds the lone Electrino.
+
+    | Color | Binary 1 Charge | Binary 2 Charge | Binary 3 Charge |
+    | :--- | :---: | :---: | :---: |
+    | **Red** | 0 (+P, -E) | +2ε (+P, +P) | +2ε (+P, +P) |
+    | **Green** | +2ε (+P, +P) | 0 (+P, -E) | +2ε (+P, +P) |
+    | **Blue** | +2ε (+P, +P) | +2ε (+P, +P) | 0 (+P, -E) |
+
+    #### Down Quark (Net Personality Charge: -2ε)
+    A down quark consists of two personality Positrinos (+ε) and four Electrinos (-ε). The anticolor is determined by which of the three binaries binds the two Positrinos.
+
+    | Anticolor | Binary 1 Charge | Binary 2 Charge | Binary 3 Charge |
+    | :--- | :---: | :---: | :---: |
+    | **Antired** | +2ε (+P, +P) | -2ε (-E, -E) | -2ε (-E, -E) |
+    | **Antigreen**| -2ε (-E, -E) | +2ε (+P, +P) | -2ε (-E, -E) |
+    | **Antiblue** | -2ε (-E, -E) | -2ε (-E, -E) | +2ε (+P, +P) |
+
 -   **Color Confinement and Singlets:** The requirement for hadrons to be "colorless" is interpreted as a condition for overall system stability. A stable hadron (baryon or meson) is one where the constituent quark cores have achieved a symmetric, equilibrium configuration of their coupled polar vortices. This stable, "color singlet" state minimizes the external projection of the strong force field, effectively confining it within the hadron.
 
 ### 4. Reinterpretation of Gluon Properties
